# chauvel.org

./: .buildinfo  .gitignore  .gitmodules  CNAME  README.md  about.md  conf.py  environment.yaml  giscus.json  index.html  index.md  jupyter-lite.json  jupyter_lite_config.json  objects.inv  pyproject.toml  requirements.txt  robots.txt  searchindex.js  sitemap.xml
.github/workflows/: blog.yml  ci.yml  deploy-site.yml
_extensions/: gallery_directive.py  gravatar.py
_extra/: robots.txt
_sources/: blog.md
_sources/blog/: ai-generated-article.md  building-blog-from-scratch.md  making-pyodide-powered-gpt-chat-app.md  modernizing-vim.md  pypy-benchmark-take2.md  pypy-benchmark.md  solana-dapp.md
_static/: documentation_options.js
_static/css/: custom.css
_static/js/: sha256.js
_templates/: about.html  giscus.html  page.html
about/: index.html
blog/: adding-sphinx-directive-to-render-gravatar.md  atom.xml  calculate-pi.md  chat-server-app.md  embedding-jupyterlite-in-sphinx.md  index.html  making-pyodide-powered-gpt-chat-app.md  pypy-benchmark-take2.md  solana-dapp.md
blog/2024/: ai-generated-article.md  building-blog-from-scratch.md  calculate-pi.md  index.html
blog/2025/: index.html
blog/adding-sphinx-directive-to-render-gravatar/: index.html
blog/ai-generated-article/: index.html
blog/archive/: index.html
blog/author/: index.html
blog/author/jean-pierre-chauvel/: index.html
blog/building-blog-from-scratch/: index.html
blog/calculate-pi/: index.html
blog/category/: index.html
blog/category/ai-generated-article/: index.html
blog/category/blockchain/: index.html
blog/category/blog/: index.html
blog/category/gravatar/: index.html
blog/category/jupyterlite/: index.html
blog/category/openai/: index.html
blog/category/pypy/: index.html
blog/category/python/: index.html
blog/category/server/: index.html
blog/category/vim/: index.html
blog/chat-server-app/: index.html
blog/drafts/: index.html
blog/embedding-jupyterlite-in-sphinx/: index.html
blog/language/: index.html
blog/language/english/: index.html
blog/lite/: jupyter-lite.json
blog/lite/consoles/: index.html
blog/lite/edit/: index.html
blog/lite/notebooks/: index.html
blog/lite/repl/: index.html
blog/location/: index.html
blog/location/lima/: index.html
blog/location/peru/: index.html
blog/making-pyodide-powered-gpt-chat-app/: index.html
blog/modernizing-vim/: index.html
blog/pyodide-chat-gpt/: .last_build_id  flutter_bootstrap.js  flutter_service_worker.js  index.html  manifest.json  version.json
blog/pyodide-chat-gpt/assets/: NOTICES
blog/pypy-benchmark/: index.html
blog/pypy-benchmark-take2/: index.html
blog/solana-dapp/: index.html
blog/tag/: index.html
blog/tag/8-bit-guy/: index.html
blog/tag/ablog/: index.html
blog/tag/ai-generated/: index.html
blog/tag/anchor/: index.html
blog/tag/anchorpy/: index.html
blog/tag/blockchain/: index.html
blog/tag/chat/: index.html
genindex/: index.html
lite/: jupyter-lite.json
lite/lab/: index.html
lite/tree/: index.html
search/: index.html
source/: conf.py  giscus.html  hello-world.md  index.md
source/_extensions/: gallery_directive.py
source/_templates/: layout.html
source/articles/: hello-world.md
source/blog/: hello-world.md
(+40 files in other folders)
